redis/cache 代码优化